# deepin-devicemanager

./: .gitignore  CMakeLists.txt  DeviceManager.desktop  README.md  README.zh_CN.md  all.pro  app.qrc  dde-devicemanager.desktop  devicemanager.pro
authenticateProxy/: CMakeLists.txt  authenticateProxy.pro  main.cpp
authenticateProxy/policy/: com.deepin.pkexec.deepin-devicemanager-authenticateProxy.policy
deepin-devicemanager/: CMakeLists.txt  cmake-lcov-test.sh  lupdate.sh  translate_generation.sh
deepin-devicemanager-server/: CMakeLists.txt  com.deepin.devicemanager.conf  deepin-devicemanager-server.service
deepin-devicemanager-server/customgpuinfo/: CMakeLists.txt  main.cpp
deepin-devicemanager-server/deepin-devicecontrol/: CMakeLists.txt  deepin-devicecontrol.service  org.deepin.DeviceControl.service  org.deepin.devicecontrol.conf
deepin-devicemanager-server/deepin-devicecontrol/src/: controlinterface.cpp  controlinterface.h  main.cpp  securityutils.cpp  securityutils.h
deepin-devicemanager-server/deepin-deviceinfo/: CMakeLists.txt  deepin-deviceinfo.json
deepin-devicemanager-server/deepin-deviceinfo/src/: controlinterface.cpp  debugtimemanager.cpp  mainjob.cpp  mainjob.h  plugin.cpp
deepin-devicemanager-server/src/: DebugTimeManager.cpp  DebugTimeManager.h  MainJob.cpp  MainJob.h  commonfunction.h  main.cpp
deepin-devicemanager-server/src/DBus/: DBusInterface.cpp  DBusInterface.h
deepin-devicemanager-server/src/DriverControl/: DebInstaller.cpp  DebInstaller.h  DriverDBusInterface.cpp  DriverDBusInterface.h  DriverInstaller.cpp  DriverInstaller.h  DriverManager.cpp  DriverManager.h  HttpDriverInterface.cpp  HttpDriverInterface.h  ModCore.cpp  ModCore.h  NotifyThread.cpp  NotifyThread.h  Utils.cpp  Utils.h
deepin-devicemanager-server/src/EnableAndDisable/: RRServer.cpp  RRServer.h  ZMQBase.cpp  ZMQBase.h  ZMQServer.cpp  ZMQServer.h
deepin-devicemanager-server/src/EnableControl/: DBusEnableInterface.cpp  DBusEnableInterface.h  EnableSqlManager.cpp  EnableSqlManager.h  EnableUtils.cpp  EnableUtils.h
deepin-devicemanager-server/src/HotPlug/: DetectThread.cpp  DetectThread.h  MonitorUsb.cpp  MonitorUsb.h
deepin-devicemanager-server/src/LoadInfo/: DBusInterface.cpp  DBusInterface.h  DeviceInfoManager.cpp  DeviceInfoManager.h  ThreadPool.cpp  ThreadPool.h  ThreadPoolTask.cpp  ThreadPoolTask.h
deepin-devicemanager-server/src/UsbDetect/: DetectJob.cpp  DetectJob.h  DetectThread.cpp  DetectThread.h  MonitorUsb.cpp  MonitorUsb.h
deepin-devicemanager-server/src/WakeControl/: DBusWakeupInterface.cpp  DBusWakeupInterface.h  WakeupUtils.cpp  WakeupUtils.h  ethtool-copy.h
deepin-devicemanager-server/src/ZeroMQ/: BaseDefine.h  RRServer.cpp  RRServer.h  ZMQBase.cpp  ZMQBase.h  ZMQServer.cpp  zhelpers.h
deepin-devicemanager-server/tests/: CMakeLists.txt
deepin-devicemanager-server/tests/src/: cmake-lcov-test.sh  test_main.cpp  ut_Head.h  ut_debugtimemanager.cpp  ut_mainjob.cpp
deepin-devicemanager/assets/: appimage.qrc  com.deepin.deepin-devicemanager.policy  deepin-devicemanager.desktop  deepin-devicemanager.json  hardware-information-tool.desktop  oeminfo_sampleAnduseGuideLine.toml  oeminfo_sampleAnduseGuideLine_zh_CN.toml  org.deepin.devicemanager.json  translate_generation.sh
deepin-devicemanager/configs/: org_deepin_devicemanager.hpp
deepin-devicemanager/src/: DebugTimeManager.cpp  DebugTimeManager.h  LoadDeviceInfo.cpp  LoadDeviceInfo.h  MacroDefinition.h  SingleDeviceManager.cpp  SingleDeviceManager.h  application.cpp  application.h  commondefine.h  commonfunction.cpp  commonfunction.h  deviceattributedefine.h  deviceinfoparser.cpp  deviceinfoparser.h  edidparser.h  hd.h  main.cpp  mainwindow.cpp  mainwindow.h  singletondef.h
deepin-devicemanager/src/DBus/: DBusInterface.cpp  DBusInterface.h
deepin-devicemanager/src/DDLog/: DDLog.h
deepin-devicemanager/src/DeviceManager/: DeviceAudio.cpp  DeviceAudio.h  DeviceBios.cpp  DeviceBios.h  DeviceBluetooth.cpp  DeviceBluetooth.h  DeviceCPU.cpp  DeviceCdrom.cpp  DeviceCdrom.h  DeviceComputer.cpp  DeviceComputer.h  DeviceCpu.cpp  DeviceCpu.h  DeviceGPU.cpp  DeviceGpu.cpp  DeviceGpu.h  DeviceImage.cpp  DeviceImage.h  DeviceInfo.cpp  DeviceInfo.h  DeviceInput.cpp  DeviceInput.h  DeviceKeyboard.cpp  DeviceKeyboard.h  DeviceManager.cpp  DeviceManager.h  DeviceMemory.cpp  DeviceMemory.h  DeviceMonitor.cpp  DeviceMonitor.h  DeviceMouse.cpp  DeviceMouse.h  DeviceNetwork.cpp  DeviceNetwork.h  DeviceOtherPCI.cpp  DeviceOtherPCI.h  DeviceOthers.cpp  DeviceOthers.h  DevicePower.cpp  DevicePower.h  (+6 more)
deepin-devicemanager/src/DriverControl/: DBusDriverInterface.cpp  DBusDriverInterface.h  DriverBackupThread.cpp  DriverBackupThread.h  (+4 more)
deepin-devicemanager/tests/: CMakeLists.txt  cmake-lcov-test.sh  stub.h  test-prj-running.sh  ut_debugtimemanager.cpp
deepin-devicemanager/translations/: deepin-devicemanager.qm  deepin-devicemanager.ts  deepin-devicemanager_ady.ts  deepin-devicemanager_af.ts  deepin-devicemanager_am_ET.ts  deepin-devicemanager_ar.ts  deepin-devicemanager_ast.ts  deepin-devicemanager_az.qm  deepin-devicemanager_az.ts  deepin-devicemanager_bg.ts  deepin-devicemanager_bn.ts  deepin-devicemanager_bo.qm  deepin-devicemanager_bo.ts  deepin-devicemanager_bqi.ts  deepin-devicemanager_br.ts  deepin-devicemanager_ca.qm  deepin-devicemanager_ca.ts  deepin-devicemanager_cs.qm  deepin-devicemanager_cs.ts  deepin-devicemanager_da.ts  deepin-devicemanager_de.qm  deepin-devicemanager_de.ts  deepin-devicemanager_el.ts  deepin-devicemanager_en.qm  deepin-devicemanager_en.ts  deepin-devicemanager_en_AU.qm  deepin-devicemanager_en_AU.ts  deepin-devicemanager_eo.ts  deepin-devicemanager_es.qm  deepin-devicemanager_es.ts  deepin-devicemanager_et.ts  deepin-devicemanager_eu.ts  deepin-devicemanager_fa.ts  deepin-devicemanager_fi.qm  deepin-devicemanager_fi.ts  deepin-devicemanager_fil.ts  deepin-devicemanager_fr.qm  deepin-devicemanager_fr.ts  deepin-devicemanager_gl_ES.qm  deepin-devicemanager_gl_ES.ts  (+68 more)
src/deepin-devicemanager/: CMakeLists.txt
src/deepin-devicemanager-server/: CMakeLists.txt
tests/: CMakeLists.txt
(+1781 files in other folders)
